Should repair IE7 CSS broken style.

--- a/www.videolan.org/main.css
+++ b/www.videolan.org/main.css
@@ -12,7 +12,7 @@
 /***************** General Styles *********************/
 
 html, body {
-	width: 100%; height: 100%;
+	width: 100%;
 	min-width: 750px;
 	border: 0; margin: 0; padding: 0;
 }
